force-app/main/default/objects/Outcome_Indicator_Configuration__c/Outcome_Indicator_Configuration__c.object-meta.xml
<CustomObject>
    <description>ExP OM: An Indicator is a data point that helps determine an Outcome.</description>
    <label>Outcome Indicator Configuration</label>
    <nameField>
        <displayFormat>OIC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcome Indicator Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>