force-app/main/default/objects/Outcome_Indicator_Configuration__c/fields/Indicator_as_Metric__c.field-meta.xml
<CustomField>
    <fullName>Indicator_as_Metric__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Denotes that the value of the Indicator Metric (currently Indicator Variable) is in fact the value of the Indicator. Example: Casey CANS Assessment needs and strengths.</inlineHelpText>
    <label>Indicator as Metric</label>
    <type>Checkbox</type>
</CustomField>