force-app/main/default/objects/Outcome_Indicator_Configuration__c/fields/Outcome_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Configuration__c</fullName>
    <label>Outcome Configuration</label>
    <referenceTo>Outcome_Configuration__c</referenceTo>
    <relationshipName>Indicator_Configurations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>