force-app/main/default/objects/Outcome_Indicator_Configuration__c/fields/Outcome_Indicator_Type__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Indicator_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Outcome Indicator Type</label>
    <referenceTo>Outcome_Indicator_Type__c</referenceTo>
    <relationshipLabel>Outcome Indicator Configurations</relationshipLabel>
    <relationshipName>Outcome_Indicator_Configurations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>