force-app/main/default/objects/Outcome_Indicator_Configuration__c/fields/Outcome_Variable_Response_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Variable_Response_Configuration__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Outcome Variable Response Configuration</label>
    <referenceTo>Outcome_Variable_Response_Configuration__c</referenceTo>
    <relationshipLabel>Outcome Indicator Configurations</relationshipLabel>
    <relationshipName>Outcome_Indicator_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>