force-app/main/default/objects/Outcome_Indicator_Configuration__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>The relative weight of this indicator in relationship to other indicators when calculating an outcome</description>
    <inlineHelpText>The sum of all weights must equal 100 for an outcome</inlineHelpText>
    <label>Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>