force-app/main/default/objects/Outcome_Indicator_Configuration__c/validationRules/Exp_Response_Config_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Response_Config_Required</fullName>
    <active>true</active>
    <errorConditionFormula>Outcome_Variable_Response_Configuration__c == null</errorConditionFormula>
    <errorDisplayField>Outcome_Variable_Response_Configuration__c</errorDisplayField>
    <errorMessage>A value is required for this field.</errorMessage>
</ValidationRule>