force-app/main/default/objects/Outcome_Indicator_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>Outcome_Indicator_Type__c</columns>
    <columns>Outcome_Configuration__c</columns>
    <columns>Weight__c</columns>
    <columns>Indicator_as_Metric__c</columns>
    <columns>Outcome_Variable_Response_Configuration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>